name:                elian-haskell
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/Solonarv/elian-haskell#readme
license:             BSD3
license-file:        LICENSE
author:              Nicolas Stamm
maintainer:          nstamm@gmx.de
copyright:           2017 Nicolas Stamm
category:            misc
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Text.Elian,
                       Text.Elian.Types,
                       Text.Elian.Render.ASCII.Simple,
                       Text.Elian.Render.Rasterific.Simple
  build-depends:       base >= 4.7 && < 5,
                       boxes,
                       Rasterific, JuicyPixels
  default-language:    Haskell2010


test-suite elian-haskell-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , elian-haskell
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/Solonarv/elian-haskell
